fix(client): fix item height on mobile

--- a/packages/client/src/components/ArticleList/index.module.scss
+++ b/packages/client/src/components/ArticleList/index.module.scss
@@ -142,7 +142,7 @@
       .coverWrapper {
         width: 100%;
         max-width: 100%;
-        max-height: 160px;
+        min-height: 160px;
         margin-right: 0;
         margin-bottom: 1rem;
       }
